// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePage snapshot 1--Renders correctly before data is fetched 1`] = `
<DocumentFragment>
  <div
    class="wrapper"
  >
    <div
      class="container container--body"
    >
      <section
        class="container container--section1"
      >
        <div
          class="description"
        >
          <div
            class="description__item--one"
          />
          <div
            class="description__item--two"
          >
            <h1
              class="description__title"
            >
              THE LEADER IN CARING YOU...
            </h1>
            <p
              class="description__text"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos maiores possimus rerum delectus magni cupiditate nostrum, ipsa, quasi odio facere fuga ea dicta cum debitis in ducimus doloremque quod magnam.
            </p>
          </div>
        </div>
      </section>
      <section
        class="container container--section2"
      >
        <h1
          class="section2__title"
        >
          DISCOVER 
        </h1>
        <a
          class="section2__title--underline"
        >
          MORE
        </a>
      </section>
      <section
        class="galeria"
      >
        <div
          class="galeria__images"
        >
          <img
            alt="one"
            class="galeria__image galeria__image--one galeria__image--fade"
            data-testid="current-image"
            loading="lazy"
            src="https://images.unsplash.com/photo-1499728603263-13726abce5fd?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8aGVhbHRofGVufDB8fDB8fHwy"
          />
          <img
            alt="two"
            class="galeria__image galeria__image--two "
            data-testid=""
            loading="lazy"
            src="https://images.unsplash.com/photo-1488228469209-c141f8bcd723?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzB8fGhlYWx0aHxlbnwwfHwwfHx8Mg%3D%3D"
          />
          <img
            alt="three"
            class="galeria__image galeria__image--three "
            data-testid=""
            loading="lazy"
            src="https://images.unsplash.com/photo-1444312645910-ffa973656eba?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8aGVhbHRofGVufDB8fDB8fHwy"
          />
          <img
            alt="four"
            class="galeria__image galeria__image--four "
            data-testid=""
            loading="lazy"
            src="https://images.unsplash.com/photo-1530497610245-94d3c16cda28?q=80&w=1364&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
          />
          <img
            alt="five"
            class="galeria__image galeria__image--five "
            data-testid=""
            loading="lazy"
            src="https://images.unsplash.com/photo-1604881991720-f91add269bed?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mjc1fHxoZWFsdGh8ZW58MHx8MHx8fDI%3D"
          />
        </div>
      </section>
      <section
        class="container container--section3"
      >
        <h1
          class="section3__title"
        >
          MEET OUR DOCTORS
        </h1>
      </section>
      <section
        class="container container--section4"
      >
        <div
          class="section4--carousel"
        />
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HomePage snapshot 1--Renders correctly before data is fetched 2`] = `
<DocumentFragment>
  <div
    class="wrapper"
  >
    <div
      class="container container--body"
    >
      <section
        class="container container--section1"
      >
        <div
          class="description"
        >
          <div
            class="description__item--one"
          />
          <div
            class="description__item--two"
          >
            <h1
              class="description__title"
            >
              THE LEADER IN CARING YOU...
            </h1>
            <p
              class="description__text"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos maiores possimus rerum delectus magni cupiditate nostrum, ipsa, quasi odio facere fuga ea dicta cum debitis in ducimus doloremque quod magnam.
            </p>
          </div>
        </div>
      </section>
      <section
        class="container container--section2"
      >
        <h1
          class="section2__title"
        >
          DISCOVER 
        </h1>
        <a
          class="section2__title--underline"
        >
          MORE
        </a>
      </section>
      <section
        class="galeria"
      >
        <div
          class="galeria__images"
        >
          <img
            alt="one"
            class="galeria__image galeria__image--one galeria__image--fade"
            data-testid="current-image"
            loading="lazy"
            src="https://images.unsplash.com/photo-1499728603263-13726abce5fd?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8aGVhbHRofGVufDB8fDB8fHwy"
          />
          <img
            alt="two"
            class="galeria__image galeria__image--two "
            data-testid=""
            loading="lazy"
            src="https://images.unsplash.com/photo-1488228469209-c141f8bcd723?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzB8fGhlYWx0aHxlbnwwfHwwfHx8Mg%3D%3D"
          />
          <img
            alt="three"
            class="galeria__image galeria__image--three "
            data-testid=""
            loading="lazy"
            src="https://images.unsplash.com/photo-1444312645910-ffa973656eba?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8aGVhbHRofGVufDB8fDB8fHwy"
          />
          <img
            alt="four"
            class="galeria__image galeria__image--four "
            data-testid=""
            loading="lazy"
            src="https://images.unsplash.com/photo-1530497610245-94d3c16cda28?q=80&w=1364&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
          />
          <img
            alt="five"
            class="galeria__image galeria__image--five "
            data-testid=""
            loading="lazy"
            src="https://images.unsplash.com/photo-1604881991720-f91add269bed?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mjc1fHxoZWFsdGh8ZW58MHx8MHx8fDI%3D"
          />
        </div>
      </section>
      <section
        class="container container--section3"
      >
        <h1
          class="section3__title"
        >
          MEET OUR DOCTORS
        </h1>
      </section>
      <section
        class="container container--section4"
      >
        <div
          class="section4--carousel"
        >
          <div
            class="carousel__card"
          >
            <div
              class="carousel__picture"
            >
              <img
                alt="Dr Aytekin Yaliz"
                src="https://patient-appointment-system.s3.eu-west-2.amazonaws.com/1721905296892-doctor.jpg"
              />
            </div>
            <div
              class="carousel__info"
            >
              <h1
                class="carousel__doctorName"
              >
                Dr Aytekin Yaliz
              </h1>
              <h1
                class="carousel__doctorDepartment"
              >
                Allergy & Immunology
              </h1>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;
